# CLIInstall

./: .gitignore  CLAUDE.MD  PLANNING.MD  PRD.md  README.md  TASKS.MD  install-windows.ps1  install-wsl.sh
.credentials/: .gitkeep  README.md  anthropic.key.example  google.key.example
bugFix/: README.md  SOLUTION.md  buggy_script.py  pyproject.toml
bugFix/tests/: test_fixed_script.py
docs/: TROUBLESHOOTING.md
scripts/: test-all-environments.ps1  verify-installation.ps1  verify-installation.sh
scripts/helpers/: check-prerequisites.ps1  check-prerequisites.sh
